# marimo-jupyter-extension

./: .gitignore  README.md  pyproject.toml  renovate.json
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: configuration.md  index.md  installation.md  jupyterhub.md  troubleshooting.md
labextension/: .eslintrc.cjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
labextension/src/: file-types.test.ts  file-types.ts  index.ts
marimo_jupyter_extension/: __init__.py  _proxy_patch.py  _reap.py  config.py  executable.py  handlers.py
scripts/: bump-marimo.sh
tests/: test_config.py  test_handlers_unit.py  test_parity.py  test_proxy_patch.py  test_reap.py  test_reap_unit.py  test_setup.py
